--- a/style.css
+++ b/style.css
@@ -3,14 +3,41 @@ html {
     padding: 0;
     box-sizing: border-box;
     }
-#h1{
-    font-family: 'Anton', sans-serif;
-   
+.header-text-2{
+    font-family: 'Righteous', cursive;
+    color: white;
+    font-size: 40;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+   }
+.header-text-3{
+    font-family: 'Righteous', cursive;
+    color: white;
+    font-size: 20;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    position: absolute;
+    transform: translate(15%, 80%)
+}
+.header{
+    height: 10vh;
+    background-color: black;
+    padding: 10px 20px;
+    border: 3px solid white; 
+    margin: 50 10px;
+    position: relative;
 }
 body{
     background-image: url(blue-gradient-background.png) ;
     text-align: center;
+    
     }
     .header-text{
         
-    }
+        }
+        .image{
+            position: absolute;
+            transform: translate(-60%, 30%)
+            
+            
+}
