--- a/sccs/style.scss
+++ b/sccs/style.scss
@@ -15,7 +15,7 @@ body{
     height: 60vh;
     background-color: blue;
     display: flex;
-    flex-direction: column;
+    /*flex-direction: column;*/
 }
 .flex-child{
     height: 20vh;
